# System7

./: .gitignore  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_INDEX.md  APP_SWITCHER_PLAN.md  AUDIT_REPORT.md  BOOT_TESTING_GUIDE.md  CALLING_CONVENTION_FIX.md  COMPILATION_STATUS.md  COMPILATION_SUCCESS.md  COMPILATION_SUCCESS_FINAL.md  CONVERSION_PRIORITY_LIST.md  EVENT_FLOW_MYSTERY.md  FILE_MANAGER_WRITE_STATUS.md  GRAPHICS_DISPLAY_GUIDE.md  GRAPHICS_INVESTIGATION_REPORT.md  ICON_SYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_PRIORITIES.md  LICENSE  M68K_INTERPRETER_FINAL_SUMMARY.md  M68K_OPCODES_IMPLEMENTED.md  M68K_PHASE2_COMPLETE.md  M68K_PHASE3_COMPLETE.md  MALLOC_AUDIT_REPORT.md  MEMORY_ALLOCATION_AUDIT.md  MEMORY_CORRUPTION_ANALYSIS.md  Makefile  NEXT_PRIORITY.md  PHASE3_COMPLETE.md  PPC_BOOT_STATUS_FINAL.md  PPC_INTERPRETER_FOUNDATION.md  PPC_MISSING_INSTRUCTIONS_ANALYSIS.md  PROVENANCE.md  Patterns.rsrc  README.md  REFACTORING_PLAN.md  SEGREGATED_FREELIST_PROPOSAL.md  SUBSYSTEM_COMPLETENESS_ANALYSIS.md  SUBSYSTEM_PRIORITY_MATRIX.md  SYSTEM_MAP.md  TOP_5_INCOMPLETE_SYSTEMS.md  (+62 more)
System_Resources_Extracted/: EXTRACTION_REPORT.txt  extraction_summary.json
config/: debug.mk  default.mk  release.mk  segloader_test.mk
docs/: ARCHAEOLOGY.md  ARM_BUILD_SETUP.md  BUILD_SYSTEM_IMPROVEMENTS.md  DERIVATION_APPENDIX.md  DialogManager_Enhancements.md  EventManager_Enhancements.md  FontManager.md  GAP_ANALYSIS.md  HAL_ARCHITECTURE.md  IMPLEMENTATION_STATUS_AUDIT.md  KNOWN_ISSUES.md  KeyboardIntegration.md  MALLOC_PREVENTION.md  MEMORY_MANAGEMENT.md  MenuKey_Integration.md  OF_BOOTLOADER_IMPLEMENTATION_SUMMARY.md  OF_FORTH_BOOTLOADER_GUIDE.md  POWERPC_BOOT_STATUS.md  PPC_BOOT_FINAL_SOLUTION.md  PPC_BOOT_IEEE1275_ANALYSIS.md  PPC_BOOT_IMPLEMENTATION_PROGRESS.md  PPC_BOOT_INVESTIGATION_COMPLETE.md  PPC_BOOT_WORKING_SOLUTION.md  PPC_QUICK_START_GUIDE.md  PublicStatement.md  README_PPC_BOOT.md  ReviewerPlaybook.md  SegmentLoader_DESIGN.md  SegmentLoader_README.md  SegmentLoader_SUMMARY.md  StandardControls_QA.md  THIRD_PARTY_AUDIT.md  WM_RESTRUCTURE_PLAN.md  WM_STATUS_REPORT.md  symbols_allowlist.txt
include/: ATA_Driver.h  ColorManager.h  ErrorCodes.h  ExpandMem.h  FileManager.h  FileManagerTypes.h  FileManager_Internal.h  MacTypes.h  PS2Controller.h  QuickDraw.h  QuickDrawConstants.h  QuickDrawPlatform.h  ResourceDecompression.h  ResourceManager.h  SCSIManager.h  System71StdLib.h  SystemInit.h  SystemInternal.h  SystemTheme.h  SystemTypes.h  SystemTypes.h.backup  ToolboxCompat.h  TrapDispatcher.h  apple16.h  apple32.h  assert.h  chicago_font.h  chicago_real_font.h.backup  math.h  multiboot.h  no_stdlib_alloc.h  sched.h  signal.h  stdarg.h  stdio.h  stdlib.h  string.h  sys71_stubs.h  time.h  x86_io.h
old_stubs/: brutal_stubs.c  brutal_stubs_stub.c
prove/: AUDIT_CHECKS.md  CLEANUP_PLAN.md  Dockerfile  SIMILARITY_REPORT.md  build_and_hash.sh  scan_tree.sh  winnow.py
resources/: patterns_authentic_color.json
scripts/: check_malloc_violations.sh  check_tool_versions.sh  migrate_logging.sh
src/: ChicagoFont.c  ChicagoRealFont.c  ExpandMem.c  FileManager.c  FileManagerStubs.c  HFS_Allocation.c  HFS_Catalog.c  HFS_Volume.c  InterAppScrap_stub.c  MenuCommands.c  PS2Controller.c  ResourceDecompression.c  ResourceManager.c  SCSIManager.c  SimpleBitmapFont.c  System71StdLib.c  SystemInit.c  ToolboxCompat.c  TrapDispatcher.c  boot.S  (+23 more)
src/StandardFile/: CMakeLists.txt  Pack3_StandardFile.c  StandardFile.c  StandardFileHAL_Shims.c
src/TimeManager/: CMakeLists.txt  DeferredTasks.c  MicrosecondTimer.c  PlatformTime.c  TimeBase.c  TimeManager.c  TimeManagerCore.c  TimerInterrupts.c  TimerTasks.c
(+828 files in other folders)
